fix: use github profile as namespace

--- a/golangtour-dark.user.css
+++ b/golangtour-dark.user.css
@@ -1,6 +1,6 @@
 /* ==UserStyle==
 @name           GolangTour-Dark
-@namespace      github.com/openstyles/stylus
+@namespace      github.com/d-Rickyy-b
 @version        1.0.0
 @description    A dark theme for the "Tour of Go" introduction for the Go programming language
 @homepageURL    https://github.com/d-Rickyy-b/GolangTour-Dark
